--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.0",
-    "sass-loader": "^7.1.0",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^10.0.5",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "node-gyp": "^9.4.0",
     "react": "16.2",
-    "react-dom": "16.2"
+    "react-dom": "16.2",
+    "sass": "^1.66.1"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
